Add Store editorial Release discovery
